--- a/src/components/VinylPlayer/TransportBar.module.css
+++ b/src/components/VinylPlayer/TransportBar.module.css
@@ -47,7 +47,7 @@
   border-right: 2px solid rgba(0, 0, 0, 0.18);
 }
 
-/* Orange recording dot */
+/* Lilac accent dot */
 .orangeDot {
   position: absolute;
   top: 22px;
@@ -56,7 +56,7 @@
   width: 14px;
   height: 14px;
   border-radius: 50%;
-  background-color: #E8652D;
+  background-color: #B09EC8;
 }
 
 /* Tactile press */
